[gd_scene load_steps=71 format=2]

[ext_resource path="res://Assets/portal/portal12.png" type="Texture" id=1]
[ext_resource path="res://Assets/portal/portal13.png" type="Texture" id=2]
[ext_resource path="res://Assets/portal/portal53.png" type="Texture" id=3]
[ext_resource path="res://Assets/portal/portal59.png" type="Texture" id=4]
[ext_resource path="res://Assets/portal/portal50.png" type="Texture" id=5]
[ext_resource path="res://Assets/dust1.mp3" type="AudioStream" id=6]
[ext_resource path="res://Assets/portal/portal57.png" type="Texture" id=7]
[ext_resource path="res://Assets/portal/portal51.png" type="Texture" id=8]
[ext_resource path="res://Assets/portal/portal64.png" type="Texture" id=9]
[ext_resource path="res://Assets/portal/portal49.png" type="Texture" id=10]
[ext_resource path="res://Assets/portal/portal54.png" type="Texture" id=11]
[ext_resource path="res://Assets/portal/portal55.png" type="Texture" id=12]
[ext_resource path="res://Assets/portal/portal61.png" type="Texture" id=13]
[ext_resource path="res://Assets/portal/portal63.png" type="Texture" id=14]
[ext_resource path="res://Assets/portal/portal62.png" type="Texture" id=15]
[ext_resource path="res://Assets/portal/portal52.png" type="Texture" id=16]
[ext_resource path="res://Assets/portal/portal58.png" type="Texture" id=17]
[ext_resource path="res://Assets/portal/portal60.png" type="Texture" id=18]
[ext_resource path="res://Assets/portal/portal56.png" type="Texture" id=19]
[ext_resource path="res://Assets/portal/portal25.png" type="Texture" id=20]
[ext_resource path="res://Assets/portal/portal27.png" type="Texture" id=21]
[ext_resource path="res://Assets/portal/portal38.png" type="Texture" id=22]
[ext_resource path="res://Assets/portal/portal17.png" type="Texture" id=23]
[ext_resource path="res://Assets/portal/portal19.png" type="Texture" id=24]
[ext_resource path="res://Assets/portal/portal29.png" type="Texture" id=25]
[ext_resource path="res://Assets/portal/portal16.png" type="Texture" id=26]
[ext_resource path="res://Assets/portal/portal34.png" type="Texture" id=27]
[ext_resource path="res://Assets/portal/portal37.png" type="Texture" id=28]
[ext_resource path="res://Assets/portal/portal42.png" type="Texture" id=29]
[ext_resource path="res://Assets/portal/portal47.png" type="Texture" id=30]
[ext_resource path="res://Assets/portal/portal36.png" type="Texture" id=31]
[ext_resource path="res://Assets/portal/portal26.png" type="Texture" id=32]
[ext_resource path="res://Assets/portal/portal35.png" type="Texture" id=33]
[ext_resource path="res://Assets/portal/portal14.png" type="Texture" id=34]
[ext_resource path="res://Assets/portal/portal45.png" type="Texture" id=35]
[ext_resource path="res://Assets/portal/portal46.png" type="Texture" id=36]
[ext_resource path="res://Assets/portal/portal48.png" type="Texture" id=37]
[ext_resource path="res://Assets/portal/portal39.png" type="Texture" id=38]
[ext_resource path="res://Assets/portal/portal41.png" type="Texture" id=39]
[ext_resource path="res://Assets/portal/portal20.png" type="Texture" id=40]
[ext_resource path="res://Assets/portal/portal31.png" type="Texture" id=41]
[ext_resource path="res://Assets/portal/portal43.png" type="Texture" id=42]
[ext_resource path="res://Assets/portal/portal28.png" type="Texture" id=43]
[ext_resource path="res://Assets/portal/portal30.png" type="Texture" id=44]
[ext_resource path="res://Assets/portal/portal23.png" type="Texture" id=45]
[ext_resource path="res://Assets/portal/portal18.png" type="Texture" id=46]
[ext_resource path="res://Assets/portal/portal32.png" type="Texture" id=47]
[ext_resource path="res://Assets/portal/portal33.png" type="Texture" id=48]
[ext_resource path="res://Assets/portal/portal22.png" type="Texture" id=49]
[ext_resource path="res://Assets/portal/portal40.png" type="Texture" id=50]
[ext_resource path="res://Assets/portal/portal44.png" type="Texture" id=51]
[ext_resource path="res://Assets/portal/portal15.png" type="Texture" id=52]
[ext_resource path="res://Assets/portal/portal21.png" type="Texture" id=53]
[ext_resource path="res://Assets/portal/portal24.png" type="Texture" id=54]
[ext_resource path="res://Assets/portal/portal04.png" type="Texture" id=55]
[ext_resource path="res://Assets/portal/portal01.png" type="Texture" id=56]
[ext_resource path="res://Assets/portal/portal02.png" type="Texture" id=57]
[ext_resource path="res://Assets/portal/portal03.png" type="Texture" id=58]
[ext_resource path="res://Assets/portal/portal08.png" type="Texture" id=59]
[ext_resource path="res://Assets/portal/portal09.png" type="Texture" id=60]
[ext_resource path="res://Assets/portal/portal05.png" type="Texture" id=61]
[ext_resource path="res://Assets/portal/portal06.png" type="Texture" id=62]
[ext_resource path="res://Assets/portal/portal07.png" type="Texture" id=63]
[ext_resource path="res://Assets/portal/portal10.png" type="Texture" id=64]
[ext_resource path="res://Assets/portal/portal11.png" type="Texture" id=65]
[ext_resource path="res://Scripts/Portal.gd" type="Script" id=66]
[ext_resource path="res://Assets/teleport_02.ogg" type="AudioStream" id=67]

[sub_resource type="CanvasItemMaterial" id=4]
light_mode = 1

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 56 ), ExtResource( 57 ), ExtResource( 58 ), ExtResource( 55 ), ExtResource( 61 ), ExtResource( 62 ), ExtResource( 63 ), ExtResource( 59 ), ExtResource( 60 ), ExtResource( 64 ), ExtResource( 65 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 34 ), ExtResource( 52 ), ExtResource( 26 ), ExtResource( 23 ), ExtResource( 46 ), ExtResource( 24 ), ExtResource( 40 ), ExtResource( 53 ), ExtResource( 49 ), ExtResource( 45 ), ExtResource( 54 ), ExtResource( 20 ), ExtResource( 32 ), ExtResource( 21 ), ExtResource( 43 ), ExtResource( 25 ), ExtResource( 44 ), ExtResource( 41 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 27 ), ExtResource( 33 ), ExtResource( 31 ), ExtResource( 28 ), ExtResource( 22 ), ExtResource( 38 ), ExtResource( 50 ), ExtResource( 39 ), ExtResource( 29 ), ExtResource( 42 ), ExtResource( 51 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 30 ), ExtResource( 37 ), ExtResource( 10 ), ExtResource( 5 ), ExtResource( 8 ), ExtResource( 16 ), ExtResource( 3 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 19 ), ExtResource( 7 ), ExtResource( 17 ), ExtResource( 4 ), ExtResource( 18 ), ExtResource( 13 ), ExtResource( 15 ), ExtResource( 14 ), ExtResource( 9 ) ],
"loop": true,
"name": "portal",
"speed": 20.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 47, 49.5 )

[node name="Portal" type="Area2D"]
script = ExtResource( 66 )

[node name="Sprite" type="Sprite" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="Sprite"]
material = SubResource( 4 )
scale = Vector2( 2, 2 )
frames = SubResource( 1 )
animation = "portal"
frame = 32
playing = true

[node name="NearingPortal" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
max_distance = 1100.0
attenuation = 4.14106

[node name="EnteringPortal" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 67 )

[node name="CentreOfPortal" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CentreOfPortal"]
position = Vector2( 10, 7.5 )
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_Portal_body_entered"]
[connection signal="body_entered" from="CentreOfPortal" to="." method="_on_CentreOfPortal_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
